ADD: dynamic copyright

--- a/Magento_Theme/layout/default.xml
+++ b/Magento_Theme/layout/default.xml
@@ -92,6 +92,12 @@
                     template="Magento_Theme::elements/copyright-hyva.phtml"
                     as="copyright"
                 />
+                <!-- <block
+                    class="Magento\Theme\Block\Html\Footer"
+                    name="footer-copyright"
+                    template="Magento_Theme::html/footer/copyright.phtml"
+                    as="copyright"
+                /> -->
             </block>
         </referenceContainer>
 
