ADD: locations for directory & store to footer

--- a/Magento_Theme/templates/html/footer.phtml
+++ b/Magento_Theme/templates/html/footer.phtml
@@ -20,6 +20,8 @@ use Magento\Framework\Escaper;
             <?= $block->getChildHtml('footer-static-links') ?>
             <?= $block->getChildHtml('footer-cms-content') ?>
             <?= $block->getChildHtml('subscribe') ?>
+            <?= $block->getChildHtml('footer-column-directory') ?>
+            <?= $block->getChildHtml('footer-column-store') ?>
         </div>
     </div>
     <div class="bg-container border-t border-b border-container">
