--- a/Magento_Review/templates/form.phtml
+++ b/Magento_Review/templates/form.phtml
@@ -104,9 +104,7 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                                                                     ->escapeHtmlAttr($rating->getId()) ?>]"
                                                                 id="<?= $escaper
                                                                     ->escapeHtmlAttr(
-                                                                        $rating->getRatingCode() .
-                                                                        '_' .
-                                                                        $option->getValue()
+                                                                        $rating->getRatingCode() . '_' . $option->getValue()
                                                                     ) ?>"
                                                                 value="<?= $escaper
                                                                     ->escapeHtmlAttr($option->getId()) ?>"/>
@@ -114,27 +112,15 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                                                                 class="rating-<?= (int)$iterator ?> m-0 cursor-pointer text-gray-400"
                                                                 for="<?= $escaper
                                                                      ->escapeHtmlAttr(
-                                                                         $rating->getRatingCode() .
-                                                                         '_' .
-                                                                         $option->getValue()
+                                                                         $rating->getRatingCode() . '_' . $option->getValue()
                                                                      ) ?>"
                                                                 title="<?= $escaper
                                                                        ->escapeHtmlAttr(
-                                                                           __(
-                                                                               '%1 %2',
-                                                                               $iterator,
-                                                                               $iterator > 1
-                                                                                    ? __('stars')
-                                                                                    : __(
-                                                                                        'star'
-                                                                                    )
-                                                                           )
+                                                                           __('%1 %2', $iterator, $iterator > 1 ? __('stars') : __('star'))
                                                                        ) ?>"
                                                                 id="<?= $escaper
                                                                     ->escapeHtmlAttr(
-                                                                        $rating->getRatingCode() .
-                                                                        '_' .
-                                                                        $option->getValue()
+                                                                        $rating->getRatingCode() . '_' . $option->getValue()
                                                                     ) ?>_label">
                                                                 <span :class="<?= (int)$iterator ?> <= clickedRatingId
                                                                     ? 'text-yellow-400'
