Dynamic field type to show password

--- a/Magento_Customer/templates/form/login.phtml
+++ b/Magento_Customer/templates/form/login.phtml
@@ -67,7 +67,7 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                         <input name="login[password]"
                                class="form-input"
                                required
-                               type="password"
+                               :type="showPassword ? 'text' : 'password'"
                             <?php if ($block->isAutocompleteDisabled()): ?>
                                 autocomplete="off"
                             <?php endif; ?>
