--- a/Magento_GiftMessage/templates/php-cart/gift-options-container.phtml
+++ b/Magento_GiftMessage/templates/php-cart/gift-options-container.phtml
@@ -1,4 +1,10 @@
 <?php
+/**
+ * Hyvä Themes - https://hyva.io
+ * Copyright © Hyvä Themes 2020-present. All rights reserved.
+ * This product is licensed per Magento install
+ * See https://hyva.io/license
+ */
 
 declare(strict_types=1);
 
@@ -22,11 +28,10 @@ $uniqueId = uniqid();
 ?>
 
 <script>
-    function giftOptions_<?= /** @noEscape */ $uniqueId ?>() {
+    function initGiftOptions<?= /** @noEscape */ $uniqueId ?>() {
         'use strict';
         return {
             inSlideOut: <?= $slideOutDrawer ? 'true' : 'false' ?>,
-            isLoading: false,
             formBlockVisibility: false,
             resultBlockVisibility: false,
             hasActiveOptions: false,
@@ -45,10 +50,14 @@ $uniqueId = uniqid();
                 alreadyAdded: null,
             },
             extensionAttributes: {},
-            initialize() {
-                const message = window.giftOptionsConfig.giftMessage.hasOwnProperty(this.itemId) ?
-                    window.giftOptionsConfig.giftMessage[this.itemId] : null;
-                const isObject = Object.prototype.toString.call(message) == '[object Object]';
+            getMessage() {
+                return window.giftOptionsConfig.giftMessage.hasOwnProperty(this.itemId)
+                    ? window.giftOptionsConfig.giftMessage[this.itemId]
+                    : null;
+            },
+            init() {
+                const message = this.getMessage();
+                const isObject = Object.prototype.toString.call(message) === '[object Object]';
 
                 if (isObject) {
                     this.savedFormMessage.recipient = message.recipient;
@@ -67,46 +76,44 @@ $uniqueId = uniqid();
                             document.body.style.overflow = null;
                         }
                     }
-                    this.$watch('formBlockVisibility', value => onDrawerToggle(value));
+                    this.$watch('formBlockVisibility', () => onDrawerToggle());
                 <?php endif ?>
 
-                window.addEventListener('addional-gift-options-loaded-' + this.itemId, (e) => {
+                this.initEventListeners();
+            },
+            initEventListeners() {
+                window.addEventListener('additional-gift-options-loaded-' + this.itemId, (event) => {
                     if (this.hasActiveOptions) return;
 
-                    if (e.detail.isOrderLevelGiftOptionsEnabled) this.hasActiveOptions = true;
+                    if (event.detail.isOrderLevelGiftOptionsEnabled) this.hasActiveOptions = true;
                 });
 
-                window.addEventListener('addional-gift-options-results-' + this.itemId, (e) => {
+                window.addEventListener('additional-gift-options-results-' + this.itemId, (event) => {
                     if (this.resultBlockVisibility) return;
 
-                    this.resultBlockVisibility = e.detail.hasResults;
+                    this.resultBlockVisibility = event.detail.hasResults;
                 });
 
-                window.addEventListener('update-gift-options-extension-attributes-' + this.itemId, (e) => {
-                    this.extensionAttributes = {
-                        ...this.extensionAttributes,
-                        ...e.detail
-                    };
+                window.addEventListener('update-gift-options-extension-attributes-' + this.itemId, (event) => {
+                    this.extensionAttributes = Object.assign({}, this.extensionAttributes, event.detail);
                 });
             },
-
-            submitGiftOption() {
-                let endPoint;
+            getRestEndpoint() {
                 const restBaseUrl = BASE_URL + 'rest/' + CURRENT_STORE_CODE + '/V1/';
+
+                return window.giftOptionsConfig.isCustomerLoggedIn
+                    ? restBaseUrl + 'carts/mine/gift-message'
+                    : restBaseUrl + 'guest-carts/' + window.giftOptionsConfig.quoteId + '/gift-message';
+            },
+            submitGiftOption() {
 
                 window.dispatchEvent(new CustomEvent('before-gift-options-submit-' + this.itemId, {
                     detail: {}
                 }))
 
-                if (window.giftOptionsConfig.isCustomerLoggedIn) {
-                    endPoint = restBaseUrl + 'carts/mine/gift-message';
-                } else {
-                    endPoint = restBaseUrl + 'guest-carts/' + window.giftOptionsConfig.quoteId + '/gift-message';
-                }
+                window.dispatchEvent(new Event('gift-message-loading-start'));
 
-                this.isLoading = true;
-
-                fetch(endPoint, {
+                fetch(this.getRestEndpoint(), {
                     method: 'post',
                     headers: {
                         'Content-Type': 'application/json',
@@ -133,9 +140,57 @@ $uniqueId = uniqid();
             }
         }
     }
+
+    function initGiftItemOptions(options) {
+        'use strict';
+        const itemId = options.itemId;
+        return Object.assign({}, initGiftOptions<?= /** @noEscape */ $uniqueId ?>(), {
+            itemId: itemId,
+
+            isGiftMsgEnabled: window.giftOptionsConfig.isItemLevelGiftOptionsEnabled &&
+                window.giftOptionsConfig.giftMessage.itemLevel[`${itemId}`].is_available !== false,
+
+            getMessage() {
+                return window.giftOptionsConfig.giftMessage.hasOwnProperty('itemLevel') &&
+                window.giftOptionsConfig.giftMessage.itemLevel.hasOwnProperty(itemId)
+                    ? window.giftOptionsConfig.giftMessage.itemLevel[itemId].message
+                    : null;
+            },
+
+            initEventListeners() {
+                window.addEventListener('additional-gift-options-loaded-' + itemId, (event) => {
+                    if (this.hasActiveOptions) return;
+
+                    if (event.detail.isItemLevelGiftOptionsEnabled) this.hasActiveOptions = true;
+                });
+
+                window.addEventListener('additional-gift-options-results-' + itemId, (event) => {
+                    if (this.resultBlockVisibility) return;
+
+                    this.resultBlockVisibility = event.detail.hasResults;
+                });
+
+                window.addEventListener('update-gift-options-extension-attributes-' + itemId, (event) => {
+                    this.extensionAttributes = Object.assign({}, this.extensionAttributes, event.detail);
+                });
+            },
+
+            getRestEndpoint() {
+                const restBaseUrl = BASE_URL + 'rest/' + CURRENT_STORE_CODE + '/V1/';
+                return window.giftOptionsConfig.isCustomerLoggedIn
+                    ? restBaseUrl + 'carts/mine/gift-message/' + itemId
+                    : restBaseUrl + 'guest-carts/' + window.giftOptionsConfig.quoteId + '/gift-message/' + itemId;
+            }
+        })
+    }
 </script>
-<div x-data="giftOptions_<?= /** @noEscape */ $uniqueId ?>()" x-init="initialize" class="gift-options-component w-full flex flex-wrap my-6" :data-item-id="itemId" x-cloak>
+<div x-data="{isLoading: false}" x-cloak
+     @gift-message-loading-start.window="isLoading = true"
+     @gift-message-loading-end.window="isLoading = false"
+>
     <?= $block->getChildHtml('loading') ?>
+</div>
+<div x-data="initGiftOptions<?= /** @noEscape */ $uniqueId ?>()" x-init="init" class="gift-options-component w-full flex flex-wrap my-6" :data-item-id="itemId" x-cloak>
     <div class="text-left gift-options-title w-full order-first" x-show="isGiftMsgEnabled || hasActiveOptions">
         <span @click="formBlockVisibility = !formBlockVisibility" class="cursor-pointer text-primary-lighter select-none whitespace-nowrap underline">
             <?= $escaper->escapeHtml(__('Gift options')) ?>
@@ -153,8 +208,8 @@ $uniqueId = uniqid();
         <div role="dialog"
             aria-labelledby="enquiry-form-drawer-title"
             aria-modal="true"
-            class="fixed inset-y-0 right-0 z-30 flex max-w-full"
             @keydown.window.escape="formBlockVisibility=false"
+             class="fixed inset-y-0 right-0 z-30 flex max-w-full"
         >
             <div class="backdrop"
                 x-show="formBlockVisibility"
@@ -177,7 +232,7 @@ $uniqueId = uniqid();
                 x-transition:leave-end="translate-x-full"
             >
                 <div class="relative">
-                    <h2 class="text-lg font-medium leading-7 text-gray-900 "><?= $escaper->escapeHtml('Order Gift Options') ?></h4>
+                    <h2 class="text-lg font-medium leading-7 text-gray-900 "><?= $escaper->escapeHtml('Order Gift Options') ?></h2>
                         <div class="absolute top-0 right-0 cursor-pointer" @click="formBlockVisibility=false" aria-label="Close panel" tabindex="0" role="button">
                             <?= $heroicons->xHtml('inline-block', 24, 24) ?>
                         </div>
@@ -191,13 +246,10 @@ $uniqueId = uniqid();
     <div x-show="(resultBlockVisibility && !formBlockVisibility) || (resultBlockVisibility && inSlideOut)" class="gift-summary pt-2" @click="formBlockVisibility = true">
         <div class="additional-options-summary"></div>
         <div x-show="savedFormMessage.message">
-            <span><?= $escaper->escapeHtml(__('Message:')) ?></span><span x-text="savedFormMessage.message"></span>
+            <span><?= $escaper->escapeHtml(__('Message:')) ?></span> <span x-text="savedFormMessage.message"></span>
         </div>
     </div>
 </div>
-<?= /* @noEscape */ $secureRenderer->renderTag(
-    'script',
-    [],
-    'window.giftOptionsConfig = ' . /* @noEscape */ $block->getGiftOptionsConfigJson(),
-    false
-) ?>
+<script>
+    window.giftOptionsConfig = <?= /* @noEscape */ $block->getGiftOptionsConfigJson() ?>
+</script>
