#468 Fix configurable-selection-changed event arguments
Thanks to Richard Brown (@rbrown) for the report and the suggested fix!

--- a/Magento_ConfigurableProduct/templates/product/view/type/options/js/configurable-options.phtml
+++ b/Magento_ConfigurableProduct/templates/product/view/type/options/js/configurable-options.phtml
@@ -209,10 +209,11 @@ use Magento\Framework\View\Element\Template;
                         {
                             detail: {
                                 productId: this.productId,
-                                optionId: this.optionId,
-                                value: this.value,
+                                optionId: optionId,
+                                value: value,
                                 productIndex: this.productIndex,
-                                selectedValues: this.selectedValues
+                                selectedValues: this.selectedValues,
+                                candidates: this.findProductIdsForPartialSelection(this.selectedValues),
                             }
                         }
                     )
