--- a/Magento_Customer/layout/customer_account_edit.xml
+++ b/Magento_Customer/layout/customer_account_edit.xml
@@ -9,6 +9,9 @@
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <update handle="customer_account"/>
+    <head>
+        <title>Account Information</title>
+    </head>
     <body>
         <referenceContainer name="content">
             <block class="Magento\Customer\Block\Form\Edit" name="customer_edit" template="Magento_Customer::form/edit.phtml" cacheable="false">
