--- a/Magento_Customer/templates/form/forgotpassword.phtml
+++ b/Magento_Customer/templates/form/forgotpassword.phtml
@@ -9,12 +9,16 @@
 declare(strict_types=1);
 
 use Magento\Customer\Block\Account\Forgotpassword;
+use Magento\Customer\ViewModel\ForgotPasswordButton;
 use Magento\Framework\Escaper;
 use Hyva\Theme\ViewModel\ReCaptcha;
 
 /** @var Forgotpassword $block */
 /** @var Escaper $escaper */
 /** @var ReCaptcha $recaptcha */
+/** @var ForgotPasswordButton $forgotPasswordButtonViewModel */
+
+$forgotPasswordButtonViewModel = $block->getData('forgot_password_button_view_model');
 
 $formId = 'user_forgotpassword';
 
@@ -51,7 +55,7 @@ $recaptcha = $block->getData('viewModelRecaptcha');
             </fieldset>
             <div class="actions-toolbar">
                 <div class="primary">
-                    <button type="submit" class="action submit primary"><span><?= $escaper->escapeHtml(
+                    <button type="submit" class="action submit primary"" <?php if ($forgotPasswordButtonViewModel->disabled()): ?> disabled="disabled" <?php endif; ?>><span><?= $escaper->escapeHtml(
                         __('Reset My Password')
                     ) ?></span></button>
                 </div>
