#479 Use hyva wrapper for backwards compatibility

--- a/Magento_Catalog/templates/product/list/toolbar/amount.phtml
+++ b/Magento_Catalog/templates/product/list/toolbar/amount.phtml
@@ -8,9 +8,9 @@
 
 declare(strict_types=1);
 
+use Hyva\Theme\Model\LocaleFormatter;
 use Magento\Catalog\Block\Product\ProductList\Toolbar;
 use Magento\Framework\Escaper;
-use Magento\Framework\Locale\LocaleFormatter;
 
 /** @var Toolbar $block */
 /** @var Escaper $escaper */
