Revert "#479 remove temporary class"
This reverts commit b87cec35ba9f8271b6e9cbb1a7bc6c53f8b1dd61.

--- a/Magento_Theme/templates/html/pager.phtml
+++ b/Magento_Theme/templates/html/pager.phtml
@@ -28,7 +28,7 @@ $pagerItemBtnClass = $pagerItemClass
 <?php if ($block->getCollection()->getSize()): ?>
 
     <?php if ($block->getUseContainer()): ?>
-        <div class="grid items-center grid-flow-row grid-cols-4 gap-2 pager
+        <div class="thisisthecontainer grid items-center grid-flow-row grid-cols-4 gap-2 pager
             sm:grid-cols-8 md:grid-cols-4 lg:grid-cols-8">
     <?php endif ?>
 
