--- a/Magento_Theme/templates/html/pager.phtml
+++ b/Magento_Theme/templates/html/pager.phtml
@@ -170,9 +170,7 @@ $pagerItemBtnClass = $pagerItemClass
                                     'Skip to page %1',
                                     $localeFormatter->formatNumber($block->getNextJumpPage())
                                 )) ?>"
-                            >
-                                <span aria-label="<?= $escaper->escapeHtml(__('Jump forward')) ?>">...</span>
-                            </a>
+                            >...</a>
                         </li>
                     <?php endif; ?>
 
@@ -213,11 +211,8 @@ $pagerItemBtnClass = $pagerItemClass
                                 class="next <?= /* @noEscape */ $pagerItemClass ?> rounded-r-md px-3 py-2 text-gray-400
                                  border-gray-200"
                                 aria-disabled="true"
-                            >
-                                <span
-                                    aria-label="<?= $escaper->escapeHtml(__('Next')) ?>"
-                                ><?= $heroicons->chevronRightHtml('', 20, 20); ?></span>
-                            </strong>
+                                aria-label="<?= $escaper->escapeHtml(__('Next')) ?>"
+                            ><?= $heroicons->chevronRightHtml('', 20, 20); ?></strong>
                         <?php endif; ?>
                     </li>
                 </ol>
